<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <Button
        android:id="@+id/LogOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Cerrar_Sesión"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/Categorias"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogOutButton" />

    <ImageView
        android:id="@+id/btnProducto"
        android:layout_width="132dp"
        android:layout_height="127dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/cocteles" />

    <ImageView
        android:id="@+id/btnProducto2"
        android:layout_width="137dp"
        android:layout_height="123dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/Imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProducto"
        app:srcCompat="@mipmap/chocolates" />

    <ImageView
        android:id="@+id/btnProducto3"
        android:layout_width="134dp"
        android:layout_height="130dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/Imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProducto2"
        app:srcCompat="@mipmap/cremas" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="104dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Imagen"
        app:layout_constraintEnd_toStartOf="@+id/LogOutButton"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/img" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="187dp"
        android:layout_height="91dp"
        android:layout_marginTop="32dp"
        android:text="@string/Texto1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/btnProducto"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="181dp"
        android:layout_height="105dp"
        android:layout_marginTop="44dp"
        android:text="@string/Texto2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toEndOf="@+id/btnProducto2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="183dp"
        android:layout_height="130dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Texto3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnProducto3"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>